worked on front end and fixed CSS issues on mobile view

--- a/apps/invoice/src/app/components/dashboard/dashboard.component.css
+++ b/apps/invoice/src/app/components/dashboard/dashboard.component.css
@@ -6,12 +6,12 @@
 }
 
 .innerWrapper {
-  padding: 0 20px 30px 20px;
+  padding: 20px 20px 30px 20px;
 }
 
 mat-drawer-container {
   width: 100%;
-  height: auto;
+  height: 100%;
   overflow-y: auto;
 }
 .navDrawer {
@@ -94,7 +94,7 @@ mat-drawer-container {
 
 @media only screen and (min-width: 768px) {
   .innerWrapper {
-    padding: 0 40px 30px 40px;
+    padding: 40px 40px 30px 40px;
   }
 
   .navDrawer {
